<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application 2</string>
    <string name="title_section1">Summary</string>
    <string name="title_section2">Balance</string>
    <string name="title_section3">Transactions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_main_activity3">MainActivity</string>
    <string name="title_activity_add__edit__item">Add_Edit_Item</string>
    <string name="item1">Add</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="title_activity_plan_expense">PlanExpense</string>
    <string name="plan">Plan Expenses per Month</string>

    <string name="title_activity_set_plan_expense">SetPlanExpense</string>
    <string name="title_activity_plan_successfull">PlanSuccessfull</string>
    <string name="title_activity_plan_failed">PlanFailed</string>

    <!-- ACTIVITIES-->
    <!-- AddEditCategory -->
    <string name="income">income</string>
    <string name="expense">expense</string>
    <string name="position">position</string>
    <!-- Balance -->
    <string name="outcome">outcome</string>
    <!-- MainActivity -->
    <string name="navigation_menu">Navigation Menu</string>
    <string name="plan_params">Parameters</string>
    <string name="plan_menu">Plan</string>
    <!-- PlanFailed -->
    <string name="incomes_should_be">Incomes should be not less than </string>
    <string name="outcomes_should_be">Outcomes should be reduced to </string>
    <string name="per_month"> perMonth</string>
    <string name="needed">Needed </string>
    <string name="reserve">Reserve</string>
    <string name="reserved"> reserved</string>
    <string name="plan_expense">Plan Expense</string>

    <!-- LAYOUTS -->
    <!-- fragment_add_edit_category -->
    <string name="category_name">Name</string>
    <string name="category_add">Add</string>

    <!-- fragment_add_edit_item -->
    <string name="add_transaction">Add Transaction</string>

    <!-- fragment_plan_expense -->
    <string name="transport">Transport</string>
    <string name="food">Food</string>
    <string name="bill">Bills</string>
    <string name="other">Other</string>
    <string name="sum">Sum</string>
    <string name="set">Set</string>
    <string name="planIncome">Plan Incomes per Month</string>

    <!-- fragment_set_plan_expense -->
    <string name="set_plan">Plan</string>

    <!-- fragment_transaction_history -->
    <string name="add_category">Add category</string>
    <string name="all_categories">All</string>
    <string name="add">Add</string>
    <string name="summary_item_label">Fact/Plan</string>
    <string name="currentYear">current year</string>
    <string name="currentMonth">current month</string>
    <string name="periodFromTo">period from to</string>
    <string name="please_add_transaction">Please enter value of your transaction</string>


</resources>
