<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app.TransactionHistory">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All"
        android:id="@+id/allcat"
        android:layout_gravity="center_horizontal|bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="addCategory"
        android:id="@+id/addCat"
        android:layout_gravity="left|bottom" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodFromTo"
                android:id="@+id/checkBoxFromTo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                style="@android:style/Widget.Holo.Spinner"
                android:text="Medium Text"
                android:id="@+id/textViewDateFrom"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                style="@android:style/Widget.Holo.Spinner"
                android:text="Medium Text"
                android:id="@+id/textViewDateTo"
                android:onClick="showDatePickerDialog"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentMonth"
            android:id="@+id/checkBoxCurrentMonth" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentYear"
            android:id="@+id/checkBoxCurrentYear" />

        <ListView android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
            android:layout_gravity="center" />

    </LinearLayout>


</FrameLayout>
